# mto

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TEST_RESULTS.md  pyproject.toml
docs/: system-flow.md
examples/: compare.sh  input_compression.sh  output_proxy.sh  session_mount.sh  stress_test.sh  wrap_prompt_cli.sh
migrations/: 001_shell_token_optimization.sql
scripts/: setup.sh
src/machine_shell_token_optimizer/: __init__.py  classifier.py  cli.py  compressor.py  config.py  middleware.py  models.py  optimizer.py  output_filters.py  redaction.py  scoring.py  shell.py  shims.py  storage.py  tee.py  tokenizer.py
src/machine_shell_token_optimizer.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_cli_shell.py  test_shell_integration.py
tests/unit/: test_classifier.py  test_compressor.py  test_optimization_levels.py  test_optimizer.py  test_redaction_storage.py  test_shims.py  test_storage.py
